syntax="proto3";

package car.service;

import "models.proto";

option go_package= "carpb";

service Customer {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Search(SearchRequest) returns (SearchResponse);
  rpc ToggleAvailable(ToggleRequest) returns (ToggleResponse);
}

message Empty{}

message RegisterRequest{
  string Make = 1;
  string Model = 2;
  string Year = 3;
  string Color = 4;
  string Class = 5;
}

message RegisterResponse{}

message SearchRequest{
  string FirstName = 1;
  string LastName = 2;
  string DOB = 3;
  string Scroll = 4;
}
  
message SearchResponse{
  repeated car.models.Car Results = 1;
}

message ToggleRequest{
  string CID = 1;
}

message ToggleResponse{
  bool NewStatus = 1;
}